--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,11 +16,15 @@ security:
             security: false
 
         main:
+            logout: ~
             anonymous: ~
+            remember_me: 
+                secret: '%secret%'
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
             #http_basic: ~
 
             # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            form_login: 
+                csrf_token_generator: security.csrf.token_manager
