--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,9 +69,13 @@ swiftmailer:
     spool: { type: memory }
 
 fos_user:
+    registration:
+        form:
+            type: AppBundle\Form\RegistrationFormType
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
     from_email:
         address: "les1000pas.com"
         sender_name: "Athletik's Hermes"
+    
